--- a/imedig-viewer-vaadin/pom.xml
+++ b/imedig-viewer-vaadin/pom.xml
@@ -1,16 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
-  	<modelVersion>4.0.0</modelVersion>
-  
-  	<groupId>es.pryades.imedig</groupId>
-  	<artifactId>imedig-viewer-vaadin</artifactId>
-  	<version>1.0-SNAPSHOT</version>
-  	<packaging>war</packaging>
-  
-  	<name>imedig-viewer-vaadin</name>
-  	<description>imedig-viewer-vaadin</description>
-  	
-  	<properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>es.pryades.imedig</groupId>
+	<artifactId>imedig-viewer-vaadin</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>war</packaging>
+
+	<name>imedig-viewer-vaadin</name>
+	<description>imedig-viewer-vaadin</description>
+
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<dcm4che-version>2.0.26</dcm4che-version>
 		<tango-icons-version>0.8.90</tango-icons-version>
@@ -80,28 +81,28 @@
 		</dependency>
 
 		<dependency>
-        	<groupId>dcm4che</groupId>
-            <artifactId>dcm4che-core</artifactId>
-            <version>${dcm4che-version}</version>
-        </dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-core</artifactId>
+			<version>${dcm4che-version}</version>
+		</dependency>
 
-        <dependency>
-                <groupId>dcm4che</groupId>
-                <artifactId>dcm4che-net</artifactId>
-                <version>${dcm4che-version}</version>
-        </dependency>
+		<dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-net</artifactId>
+			<version>${dcm4che-version}</version>
+		</dependency>
 
-        <dependency>
-                <groupId>dcm4che</groupId>
-                <artifactId>dcm4che-image</artifactId>
-                <version>${dcm4che-version}</version>
-        </dependency>
+		<dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-image</artifactId>
+			<version>${dcm4che-version}</version>
+		</dependency>
 
-        <dependency>
-                <groupId>dcm4che</groupId>
-                <artifactId>dcm4che-imageio</artifactId>
-                <version>${dcm4che-version}</version>
-        </dependency>
+		<dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-imageio</artifactId>
+			<version>${dcm4che-version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -114,7 +115,7 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.1.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -126,13 +127,13 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
-		
-  		<dependency>
-      		<groupId>com.google.code.gson</groupId>
-      		<artifactId>gson</artifactId>
-      		<version>2.2.1</version>
-    	</dependency>
-		
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
 			<artifactId>tapestry-ioc</artifactId>
@@ -147,47 +148,47 @@
 
 		<!-- This is the core HAPI library -->
 		<dependency>
-		        <groupId>ca.uhn.hapi</groupId>
-		        <artifactId>hapi-base</artifactId>
-		        <version>2.1</version>
-		</dependency>       
-				
+			<groupId>ca.uhn.hapi</groupId>
+			<artifactId>hapi-base</artifactId>
+			<version>2.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>ca.uhn.hapi</groupId>
 			<artifactId>hapi-structures-v231</artifactId>
 			<version>2.1</version>
 		</dependency>
-        		
-	    <dependency>
-        	<groupId>com.vaadin</groupId>
-            <artifactId>vaadin-server</artifactId>
-            <version>${vaadin.version}</version>
-        </dependency>
-        
+
 		<dependency>
 			<groupId>com.vaadin</groupId>
-		    <artifactId>vaadin-client-compiled</artifactId>
-		    <version>${vaadin.version}</version>
+			<artifactId>vaadin-server</artifactId>
+			<version>${vaadin.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.vaadin</groupId>
-		    <artifactId>vaadin-client-compiler</artifactId>
-		    <version>${vaadin.version}</version>
+			<artifactId>vaadin-client-compiled</artifactId>
+			<version>${vaadin.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-client-compiler</artifactId>
+			<version>${vaadin.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-client</artifactId>
 			<version>${vaadin.version}</version>
 		</dependency>
-		 
+
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-push</artifactId>
 			<version>${vaadin.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
@@ -195,22 +196,28 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>org.vaadin.addons</groupId>
-		  <artifactId>canvas</artifactId>
-		  <version>2.1</version>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>canvas</artifactId>
+			<version>2.1</version>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>jai-core</groupId>
-		  <artifactId>jai_core</artifactId>
-		  <version>1.1.3</version>
+			<groupId>jai-core</groupId>
+			<artifactId>jai_core</artifactId>
+			<version>1.1.3</version>
 		</dependency>
-		
+
 		<dependency>
-  			<groupId>jai-imageio</groupId>
-  			<artifactId>jai_imageio</artifactId>
-  			<version>1.1</version>
-		</dependency>		
+			<groupId>jai-imageio</groupId>
+			<artifactId>jai_imageio</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>es.pryades</groupId>
+			<artifactId>fabricjs-addon</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-  	
+
 </project>
