--- a/fabricjs-addon/pom.xml
+++ b/fabricjs-addon/pom.xml
@@ -16,8 +16,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
-		<vaadin.version>7.7.6</vaadin.version>
-		<vaadin.plugin.version>7.7.6</vaadin.plugin.version>
+		<vaadin.version>7.7.13</vaadin.version>
+		<vaadin.plugin.version>7.7.13</vaadin.plugin.version>
 
 		<!-- ZIP Manifest fields -->
 		<Implementation-Version>${project.version}</Implementation-Version>
@@ -54,6 +54,13 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <repositories>
+        <repository>
+            <id>vaadin-addons</id>
+            <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
