--- a/imedig-cloud/src/main/webapp/WEB-INF/web.xml
+++ b/imedig-cloud/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,11 @@
     <param-value>true</param-value>
   </context-param>
   
+  <context-param>
+    <param-name>org.restlet.application</param-name>
+    <param-value>es.pryades.imedig.servlets.WadoApplication</param-value>
+  </context-param>
+  
   <servlet>
     <servlet-name>desktop</servlet-name>
     <servlet-class>es.pryades.imedig.cloud.backend.BackendServlet</servlet-class>
@@ -16,13 +21,32 @@
         <param-value>es.pryades.imedig.cloud.backend.BackendApplication</param-value>
     </init-param>    
     <init-param>
-    	<description>
-    	Application widgetset</description>
+    	<description>Application widgetset</description>
     	<param-name>widgetset</param-name>
     	<param-value>es.pryades.imedig.cloud.backend.widgetset.Imedig_instanceWidgetset</param-value>
     </init-param>
 	<load-on-startup>1</load-on-startup>	
   </servlet>
+  
+  <servlet>
+    <display-name>imedig-init</display-name>
+    <servlet-name>imedig-init</servlet-name>
+    <servlet-class>es.pryades.imedig.servlets.InitServlet</servlet-class>
+	<load-on-startup>1</load-on-startup>	
+  </servlet>
+
+  <servlet>
+    <description></description>
+    <display-name>services</display-name>
+    <servlet-name>services</servlet-name>
+    <servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
+	<load-on-startup>2</load-on-startup>	
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>services</servlet-name>
+    <url-pattern>/services/*</url-pattern>
+  </servlet-mapping>
   
   <servlet-mapping>
     <servlet-name>desktop</servlet-name>
