--- a/fullscreen-addon/pom.xml
+++ b/fullscreen-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>es.pryades</groupId>
 	<artifactId>fullscreen-addon</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>FullScreen Add-on</name>
 
 	<prerequisites>
