--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.pryades.imedig</groupId>
 	<artifactId>imedig-cloud</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>2.0.1</version>
 	<packaging>war</packaging>
 
 	<name>imedig-cloud</name>
@@ -16,6 +16,8 @@
 		<vaadin.version>7.7.13</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<dcm4che-version>2.0.26</dcm4che-version>
+		<fullscreen.addon.version>1.0.0</fullscreen.addon.version>
+		<fabricjs.addon.version>1.0.0</fabricjs.addon.version>
 	</properties>
 
 	<build>
@@ -79,12 +81,12 @@
 		<dependency>
 			<groupId>es.pryades</groupId>
 			<artifactId>fabricjs-addon</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${fabricjs.addon.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>es.pryades</groupId>
 			<artifactId>fullscreen-addon</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${fullscreen.addon.version}</version>
 		</dependency>
 
 		<!-- vaadin -->
