--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -17,7 +17,8 @@
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<dcm4che-version>2.0.26</dcm4che-version>
 		<fullscreen.addon.version>1.0.0</fullscreen.addon.version>
-		<fabricjs.addon.version>1.0.0</fabricjs.addon.version>
+		<fabricjs.addon.version>1.0.2-SNAPSHOT</fabricjs.addon.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<build>
@@ -29,8 +30,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
