--- a/fabricjs-addon/pom.xml
+++ b/fabricjs-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>es.pryades</groupId>
 	<artifactId>fabricjs-addon</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>2.1.0</version>
 	<name>FabricJs Add-on</name>
 
 	<prerequisites>
