--- a/imedig-core/pom.xml
+++ b/imedig-core/pom.xml
@@ -11,6 +11,7 @@
   
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.7</java.version>
 	</properties>
 
 	<build>
@@ -28,8 +29,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -104,7 +105,7 @@
 							<artifactId>maven-pmd-plugin</artifactId>
 							<version>2.5</version>
 							<configuration>
-								<targetJdk>1.6</targetJdk>
+				    			<targetJdk>${java.version}</targetJdk>
 								<verbose>true</verbose>
 							</configuration>
 						</plugin>
