--- a/imedig-services/pom.xml
+++ b/imedig-services/pom.xml
@@ -14,6 +14,7 @@
 		<gwt.version>2.3.0</gwt.version>
 		<gwt.plugin.version>2.2.0</gwt.plugin.version>
 		<tapestry-release-version>5.2.6</tapestry-release-version>
+		<java.version>1.7</java.version>
 	</properties>
 
 	<build>
@@ -25,8 +26,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
