--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.pryades.imedig</groupId>
 	<artifactId>imedig-cloud</artifactId>
-	<version>2.0.2-SNAPSHOT</version>
+	<version>2.1.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>imedig-cloud</name>
@@ -17,7 +17,7 @@
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<dcm4che-version>2.0.26</dcm4che-version>
 		<fullscreen.addon.version>1.0.0</fullscreen.addon.version>
-		<fabricjs.addon.version>1.0.2-SNAPSHOT</fabricjs.addon.version>
+		<fabricjs.addon.version>2.1.0</fabricjs.addon.version>
 		<java.version>1.7</java.version>
 	</properties>
 
