--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.pryades.imedig</groupId>
 	<artifactId>imedig-cloud</artifactId>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 	<packaging>war</packaging>
 
 	<name>imedig-cloud</name>
