--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -94,6 +94,11 @@
 			<artifactId>messagebox</artifactId>
 			<version>2.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>stepper</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
 		<!-- vaadin -->
 		<dependency>
