--- a/imedig-common/pom.xml
+++ b/imedig-common/pom.xml
@@ -325,7 +325,13 @@
 			<artifactId>htmlcleaner</artifactId>
 			<version>2.5</version>
 		</dependency>
-            
+        
+        <!-- joda time tratamiento de horas -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.2</version>
+		</dependency>    
 		<!-- <dependency>
 			<groupId>com.vaadin</groupId>
 		    <artifactId>vaadin-client-compiler</artifactId>
