--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.pryades.imedig</groupId>
 	<artifactId>imedig-cloud</artifactId>
-	<version>2.3.1</version>
+	<version>2.3.2</version>
 	<packaging>war</packaging>
 
 	<name>imedig-cloud</name>
@@ -174,15 +174,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jai-core</groupId>
-			<artifactId>jai_core</artifactId>
-			<version>1.1.3</version>
+		  <groupId>javax.media</groupId>
+		  <artifactId>jai_core</artifactId>
+		  <version>1.1.3</version>
 		</dependency>
-
+	
 		<dependency>
-			<groupId>jai-imageio</groupId>
-			<artifactId>jai_imageio</artifactId>
-			<version>1.1</version>
+		    <groupId>javax.media</groupId>
+	    	    <artifactId>jai_imageio</artifactId>
+		    <version>1.1</version>
 		</dependency>
 	</dependencies>
 
