--- a/imedig-cloud/pom.xml
+++ b/imedig-cloud/pom.xml
@@ -184,6 +184,14 @@
 	    	    <artifactId>jai_imageio</artifactId>
 		    <version>1.1</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jni -->
+		<dependency>
+		    <groupId>org.apache.tomcat</groupId>
+		    <artifactId>tomcat-jni</artifactId>
+		    <version>8.0.8</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
